Continuing to removing Javolution