@@ -22,10 +22,9 @@ import java.lang.reflect.Constructor;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-
-import javolution.util.FastList;
 
 import com.l2jserver.Config;
 import com.l2jserver.gameserver.GeoData;
@@ -80,8 +79,8 @@ public class L2Spawn implements IPositionable, IIdentifiable, INamable
 	private boolean _doRespawn;
 	/** If true then spawn is custom */
 	private boolean _customSpawn;
-	private static List<SpawnListener> _spawnListeners = new FastList<>();
-	private final FastList<L2Npc> _spawnedNpcs = new FastList<>();
+	private static List<SpawnListener> _spawnListeners = new CopyOnWriteArrayList<>();
+	private final List<L2Npc> _spawnedNpcs = new CopyOnWriteArrayList<>();
 	private Map<Integer, Location> _lastSpawnPoints;
 	private boolean _isNoRndWalk = false; // Is no random walk
 	
@@ -685,28 +684,19 @@ public class L2Spawn implements IPositionable, IIdentifiable, INamable
 	
 	public static void addSpawnListener(SpawnListener listener)
 	{
-		synchronized (_spawnListeners)
-		{
-			_spawnListeners.add(listener);
-		}
+		_spawnListeners.add(listener);
 	}
 	
 	public static void removeSpawnListener(SpawnListener listener)
 	{
-		synchronized (_spawnListeners)
-		{
-			_spawnListeners.remove(listener);
-		}
+		_spawnListeners.remove(listener);
 	}
 	
 	public static void notifyNpcSpawned(L2Npc npc)
 	{
-		synchronized (_spawnListeners)
+		for (SpawnListener listener : _spawnListeners)
 		{
-			for (SpawnListener listener : _spawnListeners)
-			{
-				listener.npcSpawned(npc);
-			}
+			listener.npcSpawned(npc);
 		}
 	}
 	
@@ -771,15 +761,10 @@ public class L2Spawn implements IPositionable, IIdentifiable, INamable
 	
 	public L2Npc getLastSpawn()
 	{
-		if (!_spawnedNpcs.isEmpty())
-		{
-			return _spawnedNpcs.getLast();
-		}
-		
-		return null;
+		return _spawnedNpcs.get(_spawnedNpcs.size() - 1);
 	}
 	
-	public final FastList<L2Npc> getSpawnedNpcs()
+	public final List<L2Npc> getSpawnedNpcs()
 	{
 		return _spawnedNpcs;
 	}
